# Swept-Volume

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
app/: general_sweep.cpp  generalized_sweep.cpp
app/include/: MeshSDF.h  post_processing.h  trajectory.h
cmake/: arrangement.cmake  lagrange.cmake  mtetcol.cmake  nanothread.cmake  stf.cmake  unordered_dense.cmake  yaml-cpp.cmake
example/: README.md
example/brush_stroke/: sweep.yaml
example/brush_stroke_blend/: config.yaml  control_points.xyz  sweep.yaml
example/fertility/: config.yaml  sweep.yaml
example/flipping_torus/: config.yaml  sweep.yaml
example/letter_L/: sweep.yaml
example/letter_L_torus/: sweep.yaml
example/simple/: config.yaml  sweep.yaml
include/generalized_sweep/: generalized_sweep.h  logger.h
include/sweep/: generalized_sweep.h
python/: README.md  example.py  pysweep3d.cpp
python/sweep3d/: __init__.py  __main__.py
src/: adaptive_column_grid.h  col_gridgen.cpp  col_gridgen.h  generalized_sweep.cpp  init_grid.h  io.cpp  io.h  logger.cpp  post_processing.h  ref_crit.cpp  ref_crit.h  tet_quality.cpp  tet_quality.h  timer.h
